# casual-mcp

./: .env-example  Makefile  README.md  casual_mcp_config.json  config.json  mcp_server_config.json  models_config.json  pyproject.toml  todo.md
lm-studio-model-templates/: toolace-2.j2
mcp-servers/amadeus/src/: server.py
mcp-servers/demo/: server.py
mcp-servers/math/: server.py
mcp-servers/time/: server.py
prompt-templates/: lm-studio-default-tools.j2  lm-studio-native-tools.j2  lm-studio-phi-4.j2  phi-4-mini-instruct.j2  toolace-2.j2
src/casual_mcp/: __init__.py  cli.py  main.py  mcp_tool_chat.py  multi_server_mcp_client.py  utils.py
src/casual_mcp/models/: __init__.py  config.py  generation_error.py  mcp_server_config.py  messages.py  model_config.py  tool_call.py
src/casual_mcp/providers/: abstract_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
tests/: test_chat.py  test_openai_provider.py  test_utils.py
