[project]
name = "casual-mcp"
version = "0.1.0"
description = "Multi-server MCP client for LLM tool orchestration and prompt tuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amadeus>=12.0.0",
    "dateparser>=1.2.1",
    "fastapi>=0.115.12",
    "fastmcp>=2.3.4",
    "jinja2>=3.1.6",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "coverage"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
casual-mcp = "casual_mcp.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
lint.extend-select = ["I", "UP", "F", "E", "W"]
exclude = ["tests/fixtures", "src/tuner"]

[tool.mypy]
strict = true
ignore_missing_imports = true
